[FIX] notification layout bug

--- a/app/css/popup/_notify.scss
+++ b/app/css/popup/_notify.scss
@@ -1,19 +1,19 @@
-/* popup/notify.scss */
+// popup/notify.scss
 
 .popup-notify {
     height: auto;
     left: auto;
+    margin-bottom: 20px;
     margin-left: auto;
-    margin-top: 15px;
-    opacity: 0.85;
+    opacity: .85;
     padding: 20px;
     position: relative;
     right: 20px;
-    top: 5px;
-    width: 300px;
+    top: 20px;
     transform: translateY(0);
+    width: 300px;
 
     h3 {
-        margin: 0px 0px 8px;
+        margin: 0 0 8px;
     }
 }
